--- a/src/assets/css/admin-panel.css
+++ b/src/assets/css/admin-panel.css
@@ -233,6 +233,28 @@
     margin-bottom: 32px;
 }
 
+.admin-panel .orphan-form-data .btn-group {
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.admin-panel .orphan-form-data .btn-group button {
+    cursor: pointer;
+    padding: 10px 15px;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--main-white-color);
+    background-color: var(--dark-green-color);
+    border: none;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
 .admin-panel .orphan-form-data .details-box {
     width: 100%;
     display: flex;
@@ -286,6 +308,7 @@
     background-color: var(--light-gray-color);
     padding: 20px;
     display: block;
+    margin-bottom: 20px;
 }
 
 .admin-panel .orphan-form-data .orphan-sponsor h4 {
@@ -299,6 +322,61 @@
     gap: 15px;
 }
 
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments {
+    width: 100%;
+    margin-top: 30px;
+    padding: 30px;
+    background-color: var(--main-white-color);
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments h5 {
+    color: var(--main-green-color);
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments h5::before {
+    content: "";
+    width: 50px;
+    height: 5px;
+    background-color: var(--main-red-color);
+    position: absolute;
+    right: 0;
+    bottom: -5px;
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 10px;
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history .item {
+    max-width: 250px;
+    height: auto;
+    padding: 15px;
+    background-color: var(--light-gray-color);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history .item p {
+    font-size: 14px !important;
+    margin-bottom: 8px;
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history .item p b {
+    color: var(--main-black-color);
+}
+
+.admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history .item p span {
+    color: var(--main-green-color);
+}
+
 @media only screen and (max-width: 820px) {
     .admin-panel .orphan-form-data .orphan-sponsor .data {
         display: grid;
@@ -307,6 +385,10 @@
     }
 
     .admin-panel .orphans .orphans-list {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history {
         grid-template-columns: 1fr 1fr;
     }
 }
@@ -375,6 +457,7 @@
     }
 
     .admin-panel .orphan-form-data .details-box .data {
+        width: 100%;
         padding: 0;
     }
 
@@ -385,6 +468,17 @@
     .admin-panel .orphan-form-data .details-box .data p b {
         min-width: auto;
         margin-inline-end: 5px;
+    }
+
+    .admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .admin-panel .orphan-form-data .orphan-sponsor .sponsor-payments .payments-history .item {
+        max-width: unset;
+        width: 100%;
     }
     
 }
